2005-03-14 13:20  antirez

	* ChangeLog, jim.h: Some change to make jim.h more C++ friendly,
	  still not working with g++ btw.

2005-03-14 10:16  antirez

	* ChangeLog, TODO, jim.c: Removed the inclusion of a not-needed
	  header file "sys/time.h" that prevented compilation with
	  JIM_ANSIC under non POSIX systems.

2005-03-14 08:22  antirez

	* ChangeLog, TODO, jim.c: [lmap] command.

2005-03-13 18:43  antirez

	* ChangeLog, jim.h: Max nesting depth modified to 10000

2005-03-13 16:53  antirez

	* ChangeLog, jim.c: [string first]. Tests still not added, until
	  [string] is not (almost instead) complete.

2005-03-13 09:36  antirez

	* ChangeLog, jim.c: [string index] implemented

2005-03-12 22:42  antirez

	* ChangeLog, jim.c: Jim_GetEnum() will now sort the options in the
	  error message (ss)

2005-03-12 21:26  antirez

	* ChangeLog, jim.c, jim.h: Added the ability to compile with
	  -DJIM_ANSIC to use only ANSI-C features and libraries.

2005-03-12 10:18  antirez

	* ChangeLog, jim.c, jim.h: Added the Jim_FreeNewObj() macro to free
	  objects with refcount == 0 instead to call Jim_IncrRefCount +
	  Jim_DecrRefCount(), or directly Jim_FreeObj(). Code modified
	  accordingly where needed.  Make test + valgrind test passed after
	  the change.

2005-03-12 09:52  antirez

	* ChangeLog, README, jim.c: It's now possible to exclude
	  compilation of dynamic loaded libraries commenting the JIM_DYNLIB
	  define from the first lines of jim.c.

2005-03-12 07:43  antirez

	* ChangeLog, jim.c: Modified Jim_Free() to be more strict, now it
	  panics if the refcount of the object is not exactly 0.  Now new
	  objects that are not used may be freed using Jim_Free instead to
	  use Jim_IncrRefCount() + Jim_DecrRefCount() calls.

2005-03-11 23:00  antirez

	* ChangeLog, jim.c: Converted some free() call to Jim_Free().
	  Actually Jim_Free is a macro that just expands to free for now,
	  but in the future Jim may include a specialized allocator for
	  better performances.
